# Tutorial

./: README.md
教程文档/: practice.py
教程文档/RESTful API的使用/: Nginx的使用.md  use_api.py
教程文档/cmake/: CMakeLists.txt
教程文档/cmake/calcu/: CMakeLists.txt  add.cpp  multi.cpp
教程文档/cmake/calcu_test/: main.cpp
教程文档/cmake/include/: calcu.h
教程文档/jetson_nano/: jetson_nano基础环境配置.md
教程文档/python/: module1.py  practice.py  socket.py  thread.py
教程文档/基础工具使用/: Docker安装和使用.md  Git使用.md  SSH密钥原理.md  VisualStadio使用.md  linux基础.md  光猫和路由器.md
教程文档/模型压缩(剪枝、蒸馏、量化)/量化/: 模型量化.md
教程文档/模型部署/: Jetson部署模型.md  MobileNet-V3.py  剪枝.py
教程文档/编程语言学习/: C++Primer.md  CMake的使用.md  GDB 调试工具.md  LeetCode刷题.md  gcc、g++编译器使用.md  learn_shell.sh  shell脚本编程.md  条件编译.md
教程文档/编程语言学习/cmake/calcu_test/: CMakeLists.txt
教程文档/编程语言学习/python/: gg.py
教程文档/面试算法题/: C++知识点.ipynb  ORB算法.py  SIFT算法.py  SURF算法.py  常考算法题目.ipynb  视觉基础知识.ipynb
